# ai-web-template

./: README.md
backend/: pyproject.toml  requirements.txt
backend-ddd/: env.example  pyproject.toml  requirements.txt
backend-ddd/app/: __init__.py  main.py
backend-ddd/app/api/v1/: chat.py  health.py
backend-ddd/app/application/agent/: __init__.py  use_cases.py
backend-ddd/app/core/: config.py
backend-ddd/app/domain/: __init__.py
backend-ddd/app/domain/agent/: __init__.py  entities.py  repository.py  services.py
backend-ddd/app/domain/shared/: __init__.py  ports.py
backend-ddd/app/infrastructure/llm/: __init__.py  langchain_gateway.py
backend-ddd/app/infrastructure/persistence/: __init__.py  memory_repository.py
backend-ddd/app/interfaces/http/: __init__.py  controllers.py  schemas.py
backend-ddd/tests/: __init__.py  test_health.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py  chat.py  common.py
backend/app/services/: __init__.py  agent_service.py
backend/app/utils/: __init__.py
backend/tests/: test_health.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend-vue/: index.html  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend-vue/src/: App.vue  index.css  main.ts
frontend-vue/src/components/: ChatCard.vue
frontend-vue/src/composables/: useAgentChat.ts
frontend-vue/src/pages/: ChatPage.vue
frontend-vue/src/services/: api.ts
frontend/src/: main.tsx
(+7 files in other folders)
